have index references mostly working

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             <tr>
               <td style="text-align: center; color: grey; font-style: italic;">
                 List items <br />
-                <select size="9" id="demoListInput"></select>
+                <ul id="demoListInput">
+
+                </ul>
               </td>
               <td style="padding-left: 20px;">
                 <button id="demoListRemove" class="rp-button">Remove selected item</button>
