refactored file structure, made app more responsive, added tests

--- a/elements/create-document.html
+++ b/elements/create-document.html
@@ -1,8 +1,8 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../core-animated-pages/transitions/slide-up.html">
-<link rel="import" href="../paper-input/paper-input.html">
-<link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-spinner/paper-spinner.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/core-animated-pages/transitions/slide-up.html">
+<link rel="import" href="/components/paper-input/paper-input.html">
+<link rel="import" href="/components/paper-button/paper-button.html">
+<link rel="import" href="/components/paper-spinner/paper-spinner.html">
 <link rel="import" href="extra-icons.html">
 
 <polymer-element name="create-document">
@@ -12,12 +12,12 @@
       <core-animated-pages id="createPage" selected="{{page}}" transitions="slide-up" on-core-animated-pages-transition-end="{{complete}}">
         <section layout vertical>
           <div class="icons">
-            <div class="create-document-jumbo-icon" cross-fade>
-              <core-icon id="createDrive" icon="note-add" on-click="{{ onCreateDriveDocumentClick }}"></core-icon>
+            <div class="create-document-jumbo-icon" cross-fade on-click="{{ onCreateDriveDocumentClick }}">
+              <core-icon id="createDrive" icon="note-add"></core-icon>
               <div class="subtitle">Create Realtime Document</div>
             </div>
-            <div class="create-document-jumbo-icon" cross-fade>
-              <core-icon id="openDrive" icon="extras:drive" on-click="{{ onOpenDriveDocumentClick }}"></core-icon>
+            <div class="create-document-jumbo-icon" cross-fade on-click="{{ onOpenDriveDocumentClick }}">
+              <core-icon id="openDrive" icon="extras:drive"></core-icon>
               <div class="subtitle">Open Drive Document</div>
             </div>
           </div>
