--- a/elements/extra-icons.html
+++ b/elements/extra-icons.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="/components/polymer/polymer.html">
 
 <core-iconset-svg id="extras" iconSize="24">
     <svg>
