--- a/elements/realtime-demos.html
+++ b/elements/realtime-demos.html
@@ -1,14 +1,14 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../core-animated-pages/transitions/tile-cascade.html">
-<link rel="import" href="../core-animated-pages/transitions/hero-transition.html">
-<link rel="import" href="../core-ajax/core-ajax.html">
-<link rel="import" href="../core-drawer-panel/core-drawer-panel.html">
-<link rel="import" href="../core-icon-button/core-icon-button.html">
-<link rel="import" href="../core-tooltip/core-tooltip.html">
-<link rel="import" href="../core-icons/image-icons.html">
-<link rel="import" href="../paper-radio-group/paper-radio-group.html">
-<link rel="import" href="../paper-radio-button/paper-radio-button.html">
-<link rel="import" href="../paper-shadow/paper-shadow.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/core-animated-pages/transitions/tile-cascade.html">
+<link rel="import" href="/components/core-animated-pages/transitions/hero-transition.html">
+<link rel="import" href="/components/core-ajax/core-ajax.html">
+<link rel="import" href="/components/core-drawer-panel/core-drawer-panel.html">
+<link rel="import" href="/components/core-icon-button/core-icon-button.html">
+<link rel="import" href="/components/core-tooltip/core-tooltip.html">
+<link rel="import" href="/components/core-icons/image-icons.html">
+<link rel="import" href="/components/paper-radio-group/paper-radio-group.html">
+<link rel="import" href="/components/paper-radio-button/paper-radio-button.html">
+<link rel="import" href="/components/paper-shadow/paper-shadow.html">
 <link rel="import" href="event-card.html">
 <link rel="import" href="collaborator-element.html">
 
