fixed file references

--- a/elements/app-globals.html
+++ b/elements/app-globals.html
@@ -4,8 +4,8 @@
   <script>
     (function(utils){
       var util = new utils.RealtimeUtils({
-        appId: '840867953062',
-        clientId: '840867953062.apps.googleusercontent.com'
+        appId: 'YOUR APPID HERE',
+        clientId: 'YOUR CLIENTID HERE'
       });
 
       var Movie = function () {};
